wp-content/themes/motherjones/style.css
/* ... */
/* end sidebar items */

/* homepage */
.homepage {
  text-align: center;
}
#main.homepage a {
  background-image: none;
}
.homepage-art-byline {
  font-family: Mallory, sans-serif;
  font-weight: bold;
  font-size: 12px;
  font-style: italic;
  color: #ccc;
  text-align: right;
  line-height: 4px;
}

  /* top story */
#homepage-top-story {
  width: 800;
  float: left;
  position: relative;
}
#homepage-top-story .article-data {
  position: absolute;
  bottom: 26px;
  width: 100%;
  text-align: center;
  background: linear-gradient(transparent,#000);
}

#homepage-top-story .article-data a {
  text-shadow: none;
  color: white;
}
#homepage-top-story .hed {
  margin: 15px 25px;
}
#homepage-top-story .dek {
  margin: 15px 40px;
}
#homepage-top-story img {
  width: 800px;
  height: 450px;
}

#homepage-top-story-side {
  width: 190px;
  float: left;
  padding: 0 15px;
  margin: 0;
}
#homepage-top-story-side .article-data {
  width: 100%;
  float: none;
}
#homepage-top-story-side li {
  margin-top: 0;
  padding-top: 30px;
  padding-bottom: 0;
  background-image: url('/wp-content/themes/motherjones/img/grey_line.png');
  background-repeat: no-repeat;
  background-position: top;
  text-align: center;
  font-size: 16px;
}
#homepage-top-story-side li:first-of-type {
  margin-top: 16px;
  padding-top: 0;
  background-image: none;
}
  /* end top story */
  /* more top stories */
#homepage-more-top-stories-main {
  width: 630px;
  float: left;
}
#homepage-more-top-stories {
  margin: 0;
  padding: 0;
}
#homepage-more-top-stories li {
  padding-top: 30px;
  margin-top: 15px;
  border-top: 1px solid #ccc;
  text-align: center;
  width: 100%;
  padding-bottom: 0;
}
#homepage-more-top-stories li:first-of-type {
  margin-top: 0;
  border-top: 0;
}
#homepage-more-top-stories li .hed {
  margin-bottom: 0;
}
#homepage-more-top-stories li .article-data h3,
#homepage-more-top-stories li .article-data .byline,
#homepage-more-top-stories li .article-data {
  width: 100%;
  max-width: none;
}

#homepage-more-top-stories-side {
  width: 360px;
  float: left;
}

  /* end more top stories */
  /* homepage fullwidths */

.homepage-fullwidth {
  position: relative;
}

.homepage-fullwidth-section-label {
  position: absolute;
  top: 545px;
  padding: 5px 20px;
  margin: auto;
  transform: translateX(-50%);
}

  /* end homepage fullwidths */

  /*  homepage investigations */
#homepage-investigations-list {
  margin: 0;
  padding: 0;
}
#homepage-investigations-list li {
  width: 485px;
  margin-right: 10px;
  float: left;
  text-align: center;
  margin-bottom: 50px;
  clear: none;
}
#homepage-investigations-list img {
  width: 485px;
  margin: 0;
}

#homepage-investigations-list h3,
#homepage-investigations-list .article-data,
#homepage-investigations-list .byline {
  width: 485px;
  max-width: 485px;
}
  /* end homepage investigations */

  /* homepage sections */

#homepage-sections-list {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

#homepage-sections-list .homepage-section li {
  margin-bottom: 15px;
  text-align: center;
  clear: none;
  float: none;
}
.homepage-section-list {
  padding: 0;
}
#homepage-sections-list .homepage-section {
  padding: 0 15px;
  margin-top: 20px;
  width: 192px;
  float: left;
  display: block;
}
#homepage-sections-list .article-image,
#homepage-sections-list .article-data {
  float: none;
}
#homepage-sections-list .promo {
  font-size: 15px;
  letter-spacing: 2px;
}
#homepage-sections-list img {
  width: 161px;
}
#homepage-sections-list h3.hed {
  font-size: 16px;
  line-height: 18px;
  margin-bottom: 4px;
}
#homepage-sections-list .byline {
  font-size: 11px;
  line-height: 12px;
}

  /* end homepage sections */

  /* homepage kdrum */
#homepage-kdrum-side {
  max-width: 640px;
  margin-right: 20px;
  float: left;
}
#homepage-kdrum-side img {
  max-width: 640px;
  height: auto;
}

#kdrum-post-list {
  padding: 0;
}
#kdrum-post-list li {
  margin-top: 30px;
  padding-top: 30px;
  border-top: 1px solid #ccc;
}
#kdrum-post-list li:first-of-type {
  padding-top: 0;
  border-top: 0;
}

#kdrum-post-list .hed,
#kdrum-post-list .article-data {
  max-width: none;
  width: 100%;
  text-align: center;
  margin: 0;
}

#homepage-kdrum-ad {
  width: 300;
  float: left;
}
  /* end homepage kdrum */

/* end homepage */

